--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "set NODE_ENV=dev && export NODE_ENV=dev && webpack -wd",
-    "online": "set NODE_ENV=production && export NODE_ENV=production && webpack -p"
+    "dev": "set NODE_ENV=development && export NODE_ENV=development && webpack -wd",
+    "pro": "set NODE_ENV=production && export NODE_ENV=production && webpack -p"
   },
   "author": "rex-zsd",
   "license": "BSD-2-Clause",
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
