--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "rex-zsd",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "antd": "^1.5.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-antd": "^0.4.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
@@ -25,6 +27,9 @@
     "gulp": "^3.9.1",
     "gulp-htmlone": "^0.1.9",
     "html-webpack-plugin": "^2.19.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "normalize.css": "^4.1.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
