--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "set NODE_ENV=development && export NODE_ENV=development && webpack -wd",
-    "pro": "set NODE_ENV=production && export NODE_ENV=production && webpack -p"
+    "dev": "set NODE_ENV=development && export NODE_ENV=development && webpack-dev-server --hot --inline --history-api-fallback",
+    "prod": "set NODE_ENV=production && export NODE_ENV=production && webpack -p"
   },
   "author": "rex-zsd",
   "license": "BSD-2-Clause",
@@ -15,9 +15,10 @@
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-antd": "^0.4.0",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
@@ -30,15 +31,18 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "normalize.css": "^4.1.1",
+    "open-browser-webpack-plugin": "0.0.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {}
 }
