--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "set NODE_ENV=development && export NODE_ENV=development && webpack-dev-server --hot --inline --history-api-fallback",
-    "prod": "set NODE_ENV=production && export NODE_ENV=production && webpack -p"
+    "dev": "set NODE_ENV=development && export NODE_ENV=development && webpack-dev-server --config webpack.config.dev.js",
+    "prod": "set NODE_ENV=production && export NODE_ENV=production && webpack --config webpack.config.prod.js"
   },
   "author": "rex-zsd",
   "license": "BSD-2-Clause",
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "clean-webpack-plugin": "^0.1.9",
+    "co": "^4.6.0",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
     "expose-loader": "^0.7.1",
