--- a/package.json
+++ b/package.json
@@ -20,18 +20,16 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "clean-webpack-plugin": "^0.1.9",
-    "co": "^4.6.0",
     "css-loader": "^0.23.1",
+    "es5-shim": "^4.5.9",
     "es6-promise": "^3.2.1",
-    "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-htmlone": "^0.1.9",
     "html-webpack-plugin": "^2.19.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "normalize.css": "^4.1.1",
     "open-browser-webpack-plugin": "0.0.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
