--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "es5-shim": "^4.5.9",
     "es6-promise": "^3.2.1",
     "isomorphic-fetch": "^2.2.1",
+    "node-rsa": "^0.4.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
@@ -34,6 +35,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "clean-webpack-plugin": "^0.1.9",
+    "crypto-js": "^3.1.6",
     "css-loader": "^0.23.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
@@ -44,6 +46,7 @@
     "gulp": "^3.9.1",
     "gulp-htmlone": "^0.1.9",
     "html-webpack-plugin": "^2.19.0",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "open-browser-webpack-plugin": "0.0.2",
