--- a/package.json
+++ b/package.json
@@ -1,58 +1,78 @@
 {
-  "name": "redux",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "_set": "set NODE_ENV=production && export NODE_ENV=production",
-    "dev": "webpack-dev-server --config webpack.config.dev.js",
-    "prod": "webpack --config webpack.config.prod.js",
-    "lint": "eslint --ext .jsx src"
-  },
-  "author": "rex-zsd",
-  "license": "BSD-2-Clause",
-  "dependencies": {
-    "antd": "^1.5.0",
-    "es5-shim": "^4.5.9",
-    "es6-promise": "^3.2.1",
-    "isomorphic-fetch": "^2.2.1",
-    "node-rsa": "^0.4.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.4.1",
-    "react-router-redux": "^4.0.4",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-antd": "^0.4.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "clean-webpack-plugin": "^0.1.9",
-    "crypto-js": "^3.1.6",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.10.3",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^5.2.2",
-    "file-loader": "^0.9.0",
-    "gulp": "^3.9.1",
-    "gulp-htmlone": "^0.1.9",
-    "html-webpack-plugin": "^2.19.0",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "open-browser-webpack-plugin": "0.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  }
+    "name": "redux",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "better-npm-run dev",
+        "test": "better-npm-run test",
+        "prod": "better-npm-run prod",
+        "lint": "eslint --ext .jsx src"
+    },
+    "betterScripts": {
+        "dev": {
+            "command": "webpack-dev-server --config ./webpack.config.dev.js",
+            "env": {
+                "NODE_ENV": "development",
+                "PORT": "9003",
+                "HTTPS": true
+            }
+        },
+        "test": {
+            "command": "webpack --config ./webpack.config.prod.js && gulp htmlone",
+            "env": {
+                "NODE_ENV": "test"
+            }
+        },
+        "prod": {
+            "command": "webpack --config ./webpack.config.prod.js && gulp htmlone",
+            "env": {
+                "NODE_ENV": "production"
+            }
+        }
+    },
+    "author": "rex-zsd",
+    "license": "BSD-2-Clause",
+    "dependencies": {
+        "antd": "^1.5.0",
+        "es5-shim": "^4.5.9",
+        "es6-promise": "^3.2.1",
+        "isomorphic-fetch": "^2.2.1",
+        "node-rsa": "^0.4.0",
+        "react": "^15.1.0",
+        "react-dom": "^15.1.0",
+        "react-redux": "^4.4.5",
+        "react-router": "^2.4.1",
+        "react-router-redux": "^4.0.4",
+        "redux": "^3.5.2",
+        "redux-thunk": "^2.1.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^6.5.3",
+        "babel-core": "^6.9.1",
+        "babel-loader": "^6.2.4",
+        "babel-plugin-antd": "^0.4.0",
+        "babel-polyfill": "^6.9.1",
+        "babel-preset-es2015": "^6.9.0",
+        "babel-preset-react": "^6.5.0",
+        "babel-preset-stage-0": "^6.5.0",
+        "better-npm-run": "0.0.13",
+        "clean-webpack-plugin": "^0.1.9",
+        "crypto-js": "^3.1.6",
+        "css-loader": "^0.23.1",
+        "file-loader": "^0.9.0",
+        "gulp": "^3.9.1",
+        "gulp-htmlone": "^0.1.9",
+        "html-webpack-plugin": "^2.19.0",
+        "json-loader": "^0.5.4",
+        "less": "^2.7.1",
+        "less-loader": "^2.2.3",
+        "open-browser-webpack-plugin": "0.0.2",
+        "postcss-loader": "^1.1.1",
+        "style-loader": "^0.13.1",
+        "url-loader": "^0.5.7",
+        "webpack": "^1.13.1",
+        "webpack-dev-server": "^1.14.1",
+        "webpack-merge": "^0.17.0"
+    }
 }
